--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,6 +5,7 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --background: black;
     --text-color: white;
+    --accent-color: grey;
 }
 
 .header {
@@ -13,7 +14,25 @@
     background-color: var(--background);
     display: flex;
     align-items: center;
+    border-bottom: solid 3px var(--accent-color);
     
+}
+
+.flex-wrapper {
+    display: flex;
+}
+
+.list {
+    height: 90vh;
+    width: 35vw;
+    background-color: var(--background);
+    border-right: solid 3px var(--accent-color);
+}
+
+.notepad {
+    height: 90vh;
+    width: 65vw;
+    background-color: var(--background);
 }
 
 .title {
@@ -23,4 +42,8 @@
 
 .left {
     margin-left: calc(100vw - 90%);
+}
+
+.border {
+    box-sizing: border-box;
 }
