--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -27,12 +27,31 @@
     width: 35vw;
     background-color: var(--background);
     border-right: solid 3px var(--accent-color);
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .notepad {
     height: 90vh;
     width: 65vw;
     background-color: var(--background);
+}
+
+.todo-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 90vh;
+    width: 35vw;
+}
+
+.list-item {
+    width: 60%;
+    height: 10%;
+    border-radius: 10px;
+    background-color: var(--accent-color);
+    margin-top: 20px;
+    flex-shrink: 0;
 }
 
 .title {
@@ -47,3 +66,13 @@
 .border {
     box-sizing: border-box;
 }
+
+::-webkit-scrollbar-thumb {
+    background: var(--text-color);
+    border-radius: 25px;
+    margin-right: 3px;
+}
+
+::-webkit-scrollbar {
+    background: var(--background);
+  }
