--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,6 +6,7 @@
     --background: black;
     --text-color: white;
     --accent-color: grey;
+    --hover-color: lightgrey;
 }
 
 .header {
@@ -14,8 +15,23 @@
     background-color: var(--background);
     display: flex;
     align-items: center;
+    justify-content: space-between;
     border-bottom: solid 3px var(--accent-color);
     
+}
+
+.add-note {
+    margin-right: 5%;
+    color: var(--text-color);
+    background-color: var(--accent-color);
+    height: 35px;
+    width: 100px;
+    border-radius: 25px;
+}
+
+.add-note:hover {
+    background-color: var(--hover-color);
+    cursor: pointer;
 }
 
 .flex-wrapper {
@@ -57,6 +73,10 @@
     align-items: center;
 }
 
+.list-item:hover {
+    cursor: pointer;
+}
+
 .title {
     font-size: 2rem;
     color: var(--text-color);
@@ -80,11 +100,31 @@
 
 .note-title {
     color: var(--text-color);
-    font-size: 1.2rem;
+    background-color: var(--accent-color);
+    border: none;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.note-title:focus {
+    outline: none;
+}
+
+::placeholder {
+    color: white;
+}
+
+textarea:focus::placeholder,
+input:focus::placeholder {
+    color: transparent;
 }
 
 .left {
     margin-left: calc(100vw - 90%);
+}
+
+.hidden {
+    display: hidden;
 }
 
 .border {
@@ -100,3 +140,8 @@
 ::-webkit-scrollbar {
     background: var(--background);
   }
+
+.add-border {
+    border: 3px solid white;
+    box-sizing: border-box;
+}
